Fix bug in enum constant declarations